libs/@local/hashql/syntax-jexpr/src/lexer/snapshots/hashql_syntax_jexpr__lexer__test__invalid_escape.snap
---
source: libs/@local/hashql/syntax-jexpr/src/lexer/mod.rs
description: Invalid escape sequence
expression: "\"\\z\""
---
[31m[lexer::invalid-string] Error:[0m Lexer
   ╭─[ <unknown>:1:4 ]
   │
 1 │ "\z"
   │    │ 
   │    ╰─ Invalid escape sequence
   │ 
   │ Help: unknown escape sequence type
───╯
