libs/@local/hashql/syntax-jexpr/src/lexer/snapshots/hashql_syntax_jexpr__lexer__test__invalid_exponent.snap
---
source: libs/@local/hashql/syntax-jexpr/src/lexer/mod.rs
description: Invalid exponent format
expression: 1e
---
[31m[lexer::invalid-number] Error:[0m Lexer
   ╭─[ <unknown>:1:1 ]
   │
 1 │ 1e
   │ │ 
   │ ╰─ Expected a digit
───╯
