libs/@local/hashql/syntax-jexpr/src/lexer/snapshots/hashql_syntax_jexpr__lexer__test__invalid_literal.snap
---
source: libs/@local/hashql/syntax-jexpr/src/lexer/mod.rs
description: Incorrect case for true literal
expression: "{\"value\": True}"
---
[31m[lexer::invalid-character] Error:[0m Lexer
   ╭─[ <unknown>:1:11 ]
   │
 1 │ {"value": True}
   │           ┬  
   │           ╰── Unrecognized character
   │ 
   │ Help: J-Expr only supports standard JSON syntax. Make sure you're using valid JSON tokens like {}, [], strings, numbers, true/false, or null.
───╯
