libs/@local/hashql/syntax-jexpr/src/lexer/snapshots/hashql_syntax_jexpr__lexer__test__invalid_number.snap
---
source: libs/@local/hashql/syntax-jexpr/src/lexer/mod.rs
description: Invalid number format (trailing decimal point)
expression: "{\"number\": 42.}"
---
[31m[lexer::invalid-number] Error:[0m Lexer
   ╭─[ <unknown>:1:12 ]
   │
 1 │ {"number": 42.}
   │            │ 
   │            ╰─ Expected a digit in number literal
   │ 
   │ Help: JSON numbers must contain digits and follow the format: `[-]digits[.digits][(e|E)[+|-]digits]`
───╯
