libs/@local/hashql/syntax-jexpr/src/lexer/snapshots/hashql_syntax_jexpr__lexer__test__max_precision_number.snap
---
source: libs/@local/hashql/syntax-jexpr/src/lexer/mod.rs
description: Maximum precision double value
expression: "1.7976931348623157e308"
---
1.7976931348623157e308
