libs/@local/hashql/syntax-jexpr/src/lexer/snapshots/hashql_syntax_jexpr__lexer__test__min_precision_number.snap
---
source: libs/@local/hashql/syntax-jexpr/src/lexer/mod.rs
description: Minimum precision double value
expression: "5e-324"
---
5e-324
