libs/@local/hashql/syntax-jexpr/src/lexer/snapshots/hashql_syntax_jexpr__lexer__test__missing_comma.snap
---
source: libs/@local/hashql/syntax-jexpr/src/lexer/mod.rs
description: Array with missing commas
expression: "[1 2 3]"
---
[ 1 2 3 ]
