libs/@local/hashql/syntax-jexpr/src/lexer/snapshots/hashql_syntax_jexpr__lexer__test__missing_surrogate_pair.snap
---
source: libs/@local/hashql/syntax-jexpr/src/lexer/mod.rs
description: Missing low surrogate in surrogate pair
expression: "\"\\uD800\""
---
[31m[lexer::invalid-string] Error:[0m Lexer
   ╭─[ <unknown>:1:9 ]
   │
 1 │ "\uD800"
   │         │ 
   │         ╰─ Invalid escape sequence
   │ 
   │ Help: expected low surrogate
───╯
