libs/@local/hashql/syntax-jexpr/src/lexer/snapshots/hashql_syntax_jexpr__lexer__test__mixed_array.snap
---
source: libs/@local/hashql/syntax-jexpr/src/lexer/mod.rs
description: Array with mixed types
expression: "[1, \"text\", true, null]"
---
[ 1 , "text" , true , null ]
